Removed Azure stuff

--- a/sio-server/package.json
+++ b/sio-server/package.json
@@ -2,14 +2,15 @@
   "name": "sio-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "2.5.5",
-    "socket.io": "2.2.0"
+    "@types/socket.io": "^2.1.2",
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   }
 }
